# hx.module.test

./: .gitignore  Readme.md  hx_module_test.hxproj
project/: CMakeLists.txt  runTest.bat
project/include/: Extern.h
project/src/: haxetest.cpp
promohx/: build.hxml  createCPPLib.bat
promohx/src/com/bmfs/: Extern.hx  Include.hx  PromoHx.hx
promohx/src/com/bmfs/tech/promotion/: PromoEventDispatcher.hx
